k8s/nextjs-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-frontend
  template:
    metadata:
      labels:
        app: menu-frontend
    spec:
      containers:
        - name: menu-frontend
          image: vgnsh/menu-frontend:latest
          ports:
            - containerPort: 3000
