k8s/aks-backend-loadbal.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jenkins
spec:
  selector:
    app: django-backend
  ports:
    - protocol: TCP
      port: 80   # Publicly exposed port
      targetPort: 8000  # Your Django app's internal port
  type: LoadBalancer  # Change this from NodePort to LoadBalancer
