k8s/aks-frontend-loadbal.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: jenkins
spec:
  selector:
    app: menu-frontend
  ports:
    - protocol: TCP
      port: 80    
      targetPort: 3000  
  type: LoadBalancer
