k8s/nextjs-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: menu-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32006  # Assigning NodePort manually
  type: NodePort  # Changing from ClusterIP to NodePort
